Sun Nov 24 13:00:39 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/iconv.c src/tds/read.c src/tds/threadsafe.c:
	* src/tds/util.c:
	- indent and fixes for comment

Sun Nov 24 11:42:49 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/login.c:
	- make tds_send_login and tds7_send_login static
	- update comment using new style
	- use result of tds_flush_packet for write checking

Sun Nov 24 11:20:02 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/query.c src/tds/write.c:
	- make tds_write_packet static
	- tds_flush_packet return TDS_SUCCEED or TDS_FAIL
	- use result of tds_flush_packet submitting query
	* src/odbc/odbc.c:
	- fix return for SQL_VARCHAR
	- return SQL_ERROR if query fail
	- use tds_set_column_size

Sat Nov 23 15:41:34 EST 2002	JK Lowden <jklowden@schemamania.org>
	* src/dblib/rpc.c more attempted mating of dblib rpc to tds layer.
	* src/dblib/dblib.c fixed a warning, return erc.  

Sat Nov 23 18:10:32 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c src/dblib/unittests/rpc.c:
	* src/dblib/unittests/t0013.c src/dblib/unittests/t0014.c:
	* src/dblib/unittests/t0016.c src/dblib/unittests/t0017.c:
	* src/dblib/unittests/t0021.c src/dblib/unittests/t0022.c:
	* src/odbc/odbc.c src/odbc/unittests/common.c:
	* src/odbc/unittests/connect.c:
	- remove some warnings

Sat Nov 23 17:43:16 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/rpc.c: return 0 if not TDS7+
	+ src/tds/token.c: reuse code, save extended errors in param_info

Sat Nov 23 15:11:09 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: 
	- fix bug introduced token.c (output parameters not saved correctly)

Sat Nov 23 14:54:15 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/rpc.c: remove warnings

Sat Nov 23 14:44:53 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/ctlib/ct.c src/odbc/odbc.c src/tds/query.c: